# gitWorkFlow

./: data.txt  main.py  pyproject.toml  utils.py
.github/workflows/: comment.yml  test_workflow.yml
core/: config.py
